--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -10,8 +10,9 @@ Color:
 #777
 
 */
-
+/* ************ */
 /* Global Reset */
+/* ************ */
 
 * {
   margin: 0;
@@ -57,12 +58,14 @@ body {
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
   backface-visibility: hidden;
+  margin-bottom: 60px;
 }
 
 .heading-primary-main {
@@ -86,6 +89,8 @@ body {
   animation-duration: 1s;
   animation-timing-function: ease-out;
 }
+
+/* Animation with keyframes */
 
 @keyframes moveInLeft {
   0% {
@@ -113,4 +118,30 @@ body {
     opacity: 1;
     transform: translate(0);
   }
+}
+
+/* Styling Button in header */
+.btn:link,
+.btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #777;
+  display: inline-block;
+  border-radius: 100px;
+  transition: all 0.2s;
+}
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.btn-white {
+  background-color: #fff;
+  text-decoration: none;
+  padding: 15px 40px;
 }
