small change to css comment

--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -10,9 +10,9 @@ Color:
 #777
 
 */
-/* ************ */
-/* Global Reset */
-/* ************ */
+/* ****************************** */
+/* Global Reset & Global Settings */
+/* ****************************** */
 
 * {
   margin: 0;
