--- a/Natours/sass/main.scss
+++ b/Natours/sass/main.scss
@@ -154,6 +154,11 @@ body {
   &:hover {
     transform: translateY(-3px);
     box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
+
+    &::after {
+      transform: scaleX(1.4) scaleY(1.6);
+      opacity: 0;
+    }
   }
 
   &:active {
@@ -165,6 +170,10 @@ body {
     background-color: $color-white;
     text-decoration: none;
     padding: 1.5rem 4rem;
+
+    &::after {
+      background-color: $color-white;
+    }
   }
 
   &::after {
@@ -178,15 +187,6 @@ body {
     left: 0;
     z-index: -1;
     transition: all 0.4s;
-  }
-
-  &--white::after {
-    background-color: $color-white;
-  }
-
-  &:hover::after {
-    transform: scaleX(1.4) scaleY(1.6);
-    opacity: 0;
   }
 
   &--animated {
