--- a/Natours/sass/base/_utilities.scss
+++ b/Natours/sass/base/_utilities.scss
@@ -4,6 +4,14 @@
 }
 
 // 8rem Bottom Margin
-.u-margin-bottom-8 {
+.u-margin-bottom-lg {
   margin-bottom: 8rem;
+}
+
+.u-margin-bottom-med {
+  margin-bottom: 4rem;
+}
+
+.u-margin-bottom-sm {
+  margin-bottom: 1.5rem;
 }
