--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -3,7 +3,7 @@
   &:visited {
     text-transform: uppercase;
     text-decoration: none;
-    font-size: 1.6rem;
+    font-size: $default-font-size;
     color: $color-grey-dark;
     display: inline-block;
     border-radius: 10rem;
@@ -52,5 +52,30 @@
   &--animated {
     animation: moveInBottom 0.5s ease-out 0.75s;
     animation-fill-mode: backwards;
+  }
+}
+
+.btn-text {
+  &:link,
+  &:visited {
+    font-size: $default-font-size;
+    color: $color-primary;
+    display: inline-block;
+    text-decoration: none;
+    border-bottom: 1px solid $color-primary;
+    padding: 3px;
+    transition: all 0.2s;
+  }
+
+  &:hover {
+    background-color: $color-primary;
+    color: $color-white;
+    box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
+    transform: translateY(-2px);
+  }
+
+  &:active {
+    box-shadow: 0.5rem 1rem rgba($color-black, 0.15);
+    transform: translateY(0);
   }
 }
