--- a/Natours/sass/pages/_home.scss
+++ b/Natours/sass/pages/_home.scss
@@ -4,3 +4,28 @@
   padding: 25rem 0;
   margin-top: -20vh;
 }
+
+// Feature Section
+.section-features {
+  padding: 20rem 0;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba($color-primary-light, 0.8),
+      rgba($color-primary-dark, 0.8)
+    ),
+    url(../img/nat-4.jpg);
+  background-size: cover;
+  transform: skewY(-5deg);
+  margin-top: -8rem;
+
+  & > * {
+    transform: skewY(5deg);
+  }
+}
+
+// Tours Section
+.section-tours {
+  background-color: $color-gray-light-1;
+  padding: 40rem 0;
+  margin-top: -20vh;
+}
