--- a/Natours/sass/pages/_home.scss
+++ b/Natours/sass/pages/_home.scss
@@ -26,6 +26,6 @@
 // Tours Section
 .section-tours {
   background-color: $color-gray-light-1;
-  padding: 40rem 0;
-  margin-top: -20vh;
+  padding: 25rem 0 50rem 0;
+  margin-top: -10rem;
 }
