--- a/Natours/sass/base/_utilities.scss
+++ b/Natours/sass/base/_utilities.scss
@@ -15,3 +15,11 @@
 .u-margin-bottom-sm {
   margin-bottom: 1.5rem;
 }
+
+.u-margin-top-lg {
+  margin-top: 8rem;
+}
+
+.u-margin-top-huge {
+  margin-top: 10rem;
+}
