--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -107,11 +107,16 @@ body {
 .u-margin-bottom-sm {
   margin-bottom: 1.5rem; }
 
+.u-margin-top-lg {
+  margin-top: 8rem; }
+
+.u-margin-top-huge {
+  margin-top: 10rem; }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
   font-size: 1.6rem;
-  color: #777;
   display: inline-block;
   border-radius: 10rem;
   transition: all 0.2s;
@@ -130,10 +135,19 @@ body {
 
 .btn--white {
   background-color: #fff;
+  color: #777;
   text-decoration: none;
   padding: 1.5rem 4rem; }
   .btn--white::after {
     background-color: #fff; }
+
+.btn--green {
+  background-color: #55c57a;
+  color: #fff;
+  text-decoration: none;
+  padding: 1.5rem 4rem; }
+  .btn--green::after {
+    background-color: #55c57a; }
 
 .btn::after {
   content: "";
@@ -207,7 +221,9 @@ body {
     height: 23rem;
     background-blend-mode: screen;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px; }
     .card__picture--1 {
       background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../img/nat-5.jpg); }
     .card__picture--2 {
@@ -370,5 +386,5 @@ body {
 
 .section-tours {
   background-color: #f7f7f7;
-  padding: 25rem 0 50rem 0;
+  padding: 25rem 0 15rem 0;
   margin-top: -10rem; }
