--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -4,7 +4,6 @@
     text-transform: uppercase;
     text-decoration: none;
     font-size: $default-font-size;
-    color: $color-grey-dark;
     display: inline-block;
     border-radius: 10rem;
     transition: all 0.2s;
@@ -28,11 +27,23 @@
 
   &--white {
     background-color: $color-white;
+    color: $color-grey-dark;
     text-decoration: none;
     padding: 1.5rem 4rem;
 
     &::after {
       background-color: $color-white;
+    }
+  }
+
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+    text-decoration: none;
+    padding: 1.5rem 4rem;
+
+    &::after {
+      background-color: $color-primary;
     }
   }
 
