--- a/Natours/sass/pages/_home.scss
+++ b/Natours/sass/pages/_home.scss
@@ -29,3 +29,9 @@
   padding: 25rem 0 15rem 0;
   margin-top: -10rem;
 }
+
+// Stories Section
+.section-stories {
+  padding: 15rem 0;
+  background-color: $color-gray-light-1;
+}
