--- a/Natours/sass/abstracts/_mixins.scss
+++ b/Natours/sass/abstracts/_mixins.scss
@@ -23,3 +23,11 @@
 @mixin hover-up {
   transform: translateY(-1.5rem) scale(1.03);
 }
+
+// Absolute Center
+@mixin absCenter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
