--- a/Natours/sass/base/_utilities.scss
+++ b/Natours/sass/base/_utilities.scss
@@ -6,10 +6,18 @@
 // 8rem Bottom Margin
 .u-margin-bottom-lg {
   margin-bottom: 8rem !important;
+
+  @include respond(tab-port) {
+    margin-bottom: 5rem !important;
+  }
 }
 
 .u-margin-bottom-med {
   margin-bottom: 4rem !important;
+
+  @include respond(tab-port) {
+    margin-bottom: 3rem !important;
+  }
 }
 
 .u-margin-bottom-sm {
@@ -18,6 +26,10 @@
 
 .u-margin-top-lg {
   margin-top: 8rem !important;
+
+  @include respond(tab-port) {
+    margin-top: 5rem !important;
+  }
 }
 
 .u-margin-top-huge {
