--- a/Natours/sass/abstracts/_mixins.scss
+++ b/Natours/sass/abstracts/_mixins.scss
@@ -31,3 +31,49 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+// Media Query Manager
+/*
+0 - 600px Phone
+
+600 - 900px Tablet Portrait
+
+900 - 1200px Tablet Landscape
+
+1200 - 1800px Normal Styles
+
+1800px+ Big Desktop
+
+$breakpoint args
+- phone
+- tab-port
+- tab-land
+- big-desktop
+
+Order = Base, Typography > General Layout + grid > more specific layout > components
+*/
+@mixin respond($breakpoint) {
+  @if $breakpoint == big-desktop {
+    @media (min-width: 112.5em) {
+      @content;
+    }
+  }
+
+  @if $breakpoint == tab-land {
+    @media (max-width: 75em) {
+      @content;
+    }
+  }
+
+  @if $breakpoint == tab-port {
+    @media (max-width: 56.25em) {
+      @content;
+    }
+  }
+
+  @if $breakpoint == phone {
+    @media (max-width: 37.5em) {
+      @content;
+    }
+  }
+}
