--- a/Natours/sass/abstracts/_variables.scss
+++ b/Natours/sass/abstracts/_variables.scss
@@ -27,4 +27,5 @@ $default-font-size: 1.6rem;
 //Grid
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
+$gutter-vertical-sm: 6rem;
 $gutter-horizontal: 6rem;
