--- a/Natours/sass/base/_base.scss
+++ b/Natours/sass/base/_base.scss
@@ -9,8 +9,29 @@
 html {
   // This defines what 1rem should be
   font-size: 62.5%;
+
+  @include respond(big-desktop) {
+    font-size: 75%;
+  }
+
+  @include respond(tab-land) {
+    font-size: 56.25%; // 1rem = 8px, 8/16 = 50%
+  }
+
+  @include respond(tab-port) {
+    font-size: 50%;
+  }
+
+  @include respond(phone) {
+    font-size: 50%;
+  }
 }
 
 body {
   box-sizing: border-box;
+  padding: 3rem;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
