--- a/Natours/sass/layouts/_grid.scss
+++ b/Natours/sass/layouts/_grid.scss
@@ -1,10 +1,20 @@
 .row {
   max-width: $grid-width; //want to use max-width so that it is able to adjust its size and stay constrained.
   margin: 0 auto;
+
   @include clearfix;
 
   &:not(:last-child) {
     margin-bottom: $gutter-vertical;
+
+    @include respond(tab-port) {
+      margin-bottom: $gutter-vertical-sm;
+    }
+  }
+
+  @include respond(tab-port) {
+    max-width: 50rem;
+    padding: 0 3rem;
   }
 
   [class^="col-"] {
@@ -12,6 +22,15 @@
 
     &:not(:last-child) {
       margin-right: $gutter-horizontal;
+
+      @include respond(tab-port) {
+        margin-right: 0;
+        margin-bottom: $gutter-vertical-sm;
+      }
+    }
+
+    @include respond(tab-port) {
+      width: 100% !important;
     }
   }
   .col-1-of-2 {
