--- a/Natours/sass/pages/_home.scss
+++ b/Natours/sass/pages/_home.scss
@@ -3,6 +3,10 @@
   background-color: $color-gray-light-1;
   padding: 25rem 0;
   margin-top: -20vh;
+
+  @include respond(tab-port) {
+    padding: 20rem 0;
+  }
 }
 
 // Feature Section
@@ -21,6 +25,10 @@
   & > * {
     transform: skewY(5deg);
   }
+
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 
 // Tours Section
@@ -28,12 +36,20 @@
   background-color: $color-gray-light-1;
   padding: 25rem 0 15rem 0;
   margin-top: -10rem;
+
+  @include respond(tab-port) {
+    padding: 20rem 0 10rem 0;
+  }
 }
 
 // Stories Section
 .section-stories {
   padding: 15rem 0;
   position: relative;
+
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 
 // Booking Section
@@ -45,6 +61,10 @@
     $color-primary-dark
   );
   margin-top: -10rem;
+
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 .book {
   background-image: linear-gradient(
