--- a/Natours/sass/abstracts/_mixins.scss
+++ b/Natours/sass/abstracts/_mixins.scss
@@ -53,11 +53,11 @@ $breakpoint args
 Order = Base, Typography > General Layout + grid > more specific layout > components
 */
 @mixin respond($breakpoint) {
-  @if $breakpoint == big-desktop {
-    @media (min-width: 112.5em) {
-      @content;
-    }
-  }
+  // @if $breakpoint == big-desktop {
+  //   @media (min-width: 112.5em) {
+  //     @content;
+  //   }
+  // }
 
   @if $breakpoint == tab-land {
     @media (max-width: 75em) {
